# exactulator

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  TODO.md  deny.toml  devbox.json  renovate.json
.github/workflows/: audit.yaml  ci.yaml
src/: gui.rs  lib.rs  main.rs
