[package]
name = "exactulator"
version = "0.1.0"
edition = "2024"
description = "A calculator that provides exact results for various mathematical operations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/aexoden/exactulator"
keywords = ["calculator", "exact", "math", "arithmetic"]
categories = ["command-line-utilities", "mathematics"]

[dependencies]

[lints.clippy]
blanket_clippy_restriction_lints = "allow"
missing_inline_in_public_items = "allow"
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

[lints.rust]
let_underscore = { level = "warn", priority = -1 }
